--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -41,6 +41,12 @@
 - Azure公式ドキュメントの「[クイックスタート](https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-quickstart-blobs-dotnet?tabs=environment-variable-windows)」「[サンプル](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-samples-dotnet?toc=/azure/storage/blobs/toc.json)」を確認
 - [AZ-204ラボ](https://github.com/MicrosoftLearning/AZ-204JA-DevelopingSolutionsforMicrosoftAzure/blob/master/Instructions/Labs/AZ-204_lab_03.md)を確認（余裕があれば実施）
 
+## ハンズオン: Cosmos DB
+
+- [Cosmos DBアカウントの作成](cosmos/create-account.md)
+- [データベースとコンテナーの作成](cosmos/create-database-container.md)
+- コンテナーへの項目の追加
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
