--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -45,7 +45,7 @@
 
 - [Cosmos DBアカウントの作成](cosmos/create-account.md)
 - [データベースとコンテナーの作成](cosmos/create-database-container.md)
-- コンテナーへの項目の追加
+- [コンテナーへの項目の追加](cosmos/create-item.md)
 
 ## ハンズオン: クリーンナップ（リソースの削除）
 
