--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -23,7 +23,6 @@
 - [関数アプリのデバッグ](functions/function-debug.md)
 - [関数アプリをAzure Functionsにデプロイする](functions/function-deploy.md)
 
-
 ## ハンズオン: Blob Storage
 
 - ストレージアカウントの作成
@@ -43,9 +42,23 @@
 
 ## ハンズオン: Cosmos DB
 
+Visual Stuido Codeからの操作:
+
 - [Cosmos DBアカウントの作成](cosmos/create-account.md)
 - [データベースとコンテナーの作成](cosmos/create-database-container.md)
 - [コンテナーへの項目の追加](cosmos/create-item.md)
+
+C#プログラムからのアクセス:
+
+- [VMに、Cosmos DBアクセスのためのロールを割り当てる](cosmos/role.md)
+- [C#プロジェクトを作成する](dotnet/newproj.md)
+  - プロジェクト名 cosmosapp1
+- [必要なパッケージを追加する](dotnet/addpackage.md)
+  - 以下の3パッケージを追加します。
+  - Azure.Identity ([NuGet](https://www.nuget.org/packages/Azure.Identity/))
+  - Azure.Storage.Blobs ([NuGet](https://www.nuget.org/packages/Azure.Storage.Blobs/))
+  - Microsoft.Azure.Cosmos ([NuGet](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/))
+- [サンプルコード](cosmos/select.md)
 
 ## ハンズオン: クリーンナップ（リソースの削除）
 
