--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -56,8 +56,8 @@ C#プログラムからのアクセス:
 - [必要なパッケージを追加する](dotnet/addpackage.md)
   - 以下の3パッケージを追加します。
   - Azure.Identity ([NuGet](https://www.nuget.org/packages/Azure.Identity/))
-  - Azure.Storage.Blobs ([NuGet](https://www.nuget.org/packages/Azure.Storage.Blobs/))
   - Microsoft.Azure.Cosmos ([NuGet](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/))
+  - Newtonsoft.Json ([NuGet](https://www.nuget.org/packages/Newtonsoft.Json/))
 - [サンプルコード](cosmos/select.md)
 
 ## ハンズオン: クリーンナップ（リソースの削除）
