--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -52,12 +52,12 @@ C#プログラムからのアクセス:
 
 - [VMに、Cosmos DBアクセスのためのロールを割り当てる](cosmos/role.md)
 - [C#プロジェクトを作成する](dotnet/newproj.md)
-  - プロジェクト名 cosmosapp1
-- [必要なパッケージを追加する](dotnet/addpackage.md)
+  - プロジェクト名は cosmosapp1 とします
+- [C#プロジェクトに必要なパッケージを追加する](dotnet/addpackage.md)
   - 以下の3パッケージを追加します。
-  - Azure.Identity ([NuGet](https://www.nuget.org/packages/Azure.Identity/))
-  - Microsoft.Azure.Cosmos ([NuGet](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/))
-  - Newtonsoft.Json ([NuGet](https://www.nuget.org/packages/Newtonsoft.Json/))
+    - Azure.Identity ([NuGet](https://www.nuget.org/packages/Azure.Identity/))
+    - Microsoft.Azure.Cosmos ([NuGet](https://www.nuget.org/packages/Microsoft.Azure.Cosmos/))
+    - Newtonsoft.Json ([NuGet](https://www.nuget.org/packages/Newtonsoft.Json/))
 - [サンプルコード](cosmos/select.md)
 
 ## ハンズオン: クリーンナップ（リソースの削除）
