--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -50,6 +50,7 @@ Visual Stuido Codeからの操作:
 
 C#プログラムからのアクセス:
 
+- [VMにマネージドIDを付与](blob/vm-managed-id-role.md)
 - [VMに、Cosmos DBアクセスのためのロールを割り当てる](cosmos/role.md)
 - [C#プロジェクトを作成する](dotnet/newproj.md)
   - プロジェクト名は cosmosapp1 とします
