--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -61,6 +61,32 @@ C#プログラムからのアクセス:
     - Newtonsoft.Json ([NuGet](https://www.nuget.org/packages/Newtonsoft.Json/))
 - [サンプルコード](cosmos/select.md)
 
+## ハンズオン: Docker/ACI/ACR
+
+Docker用Linux VMの準備
+
+- [作成](dockervm/dockervm-01-create.md)
+- [接続](dockervm/dockervm-02-connect.md)
+- [Dockerインストール](dockervm/dockervm-03-install-docker.md)
+- [Dockerの実行](dockervm/dockervm-04-run-docker.md)
+- [Docker拡張機能の追加](dockervm/dockervm-05-install-docker-extension.md)
+
+Webアプリのコンテナー化
+
+- [.NETのインストール](dockervm/dockervm-06-install-dotnet.md)
+- [Webアプリの作成](dockervm/dockervm-07-create-webapp.md)
+- [Dockerfileの作成](dockervm/dockervm-08-create-dockerfile.md)
+- [イメージのビルド](dockervm/dockervm-09-create-docker-image.md)
+- [コンテナーの実行](dockervm/dockervm-10-run-container-webapp.md)
+
+Azure Container Registryへのイメージのプッシュ
+
+- [ACRの作成](dockervm/dockervm-11-create-acr.md)
+- [ACRへのプッシュ](dockervm/dockervm-12-push-image-to-acr.md)
+
+Azure Container Instanceへのコンテナーのデプロイ
+
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
