--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -63,7 +63,7 @@ C#プログラムからのアクセス:
 
 ## ハンズオン: Docker/ACI/ACR
 
-Docker用Linux VMの準備
+(1)Docker用Linux VMの準備
 
 - [作成](dockervm/dockervm-01-create.md)
 - [接続](dockervm/dockervm-02-connect.md)
@@ -71,7 +71,7 @@ Docker用Linux VMの準備
 - [Dockerの実行](dockervm/dockervm-04-run-docker.md)
 - [Docker拡張機能の追加](dockervm/dockervm-05-install-docker-extension.md)
 
-Webアプリのコンテナー化
+(2)Webアプリのコンテナー化
 
 - [.NETのインストール](dockervm/dockervm-06-install-dotnet.md)
 - [Webアプリの作成](dockervm/dockervm-07-create-webapp.md)
@@ -79,12 +79,12 @@ Webアプリのコンテナー化
 - [イメージのビルド](dockervm/dockervm-09-create-docker-image.md)
 - [コンテナーの実行](dockervm/dockervm-10-run-container-webapp.md)
 
-Azure Container Registryへのイメージのプッシュ
+(3)Azure Container Registryへのイメージのプッシュ
 
 - [ACRの作成](dockervm/dockervm-11-create-acr.md)
 - [ACRへのプッシュ](dockervm/dockervm-12-push-image-to-acr.md)
 
-Azure Container Instanceへのコンテナーのデプロイ
+(4)Azure Container Instanceへのコンテナーのデプロイ
 
 
 ## ハンズオン: クリーンナップ（リソースの削除）
