--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -65,8 +65,8 @@ C#プログラムからのアクセス:
 
 (1)Docker用Linux VMの準備
 
-- [作成](dockervm/dockervm-01-create.md)
-- [接続](dockervm/dockervm-02-connect.md)
+- [VMの作成](dockervm/dockervm-01-create.md)
+- [VMへの接続](dockervm/dockervm-02-connect.md)
 - [Dockerインストール](dockervm/dockervm-03-install-docker.md)
 - [Dockerの実行](dockervm/dockervm-04-run-docker.md)
 - [Docker拡張機能の追加](dockervm/dockervm-05-install-docker-extension.md)
