--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -87,6 +87,10 @@ C#プログラムからのアクセス:
 (4)Azure Container Instanceへのコンテナーのデプロイ
 
 
+- [ACIで、コンテナー化されたWebアプリを起動する](aci/aci-run-webapp.md)
+
+
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
