--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -86,10 +86,15 @@ C#プログラムからのアクセス:
 
 (4)Azure Container Instanceへのコンテナーのデプロイ
 
-
 - [ACIで、コンテナー化されたWebアプリを起動する](aci/aci-run-webapp.md)
 
+## ハンズオン: Microsoft ID Platform
 
+- [アプリの登録](idplatform/app-registration.md)
+
+## ハンズオン: Microsoft Graph
+
+- [Graph Explorer](idplatform/graph-explorer.md)
 
 ## ハンズオン: クリーンナップ（リソースの削除）
 
