--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -90,7 +90,9 @@ C#プログラムからのアクセス:
 
 ## ハンズオン: Microsoft ID Platform
 
-- [アプリの登録](idplatform/app-registration.md)
+- [サインインに対応したWebアプリのテナントへの登録](idplatform/webapp-registration.md)
+- [テスト用ユーザーの作成](idplatform/add-user.md)
+- [サインインに対応したWebアプリの作成](idplatform/create-webapp.md)
 
 ## ハンズオン: Microsoft Graph
 
