--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -98,6 +98,12 @@ C#プログラムからのアクセス:
 
 - [Graph Explorer](idplatform/graph-explorer.md)
 
+## ハンズオン: Azure API Management
+
+- [API Management インスタンスの作成](apim/01-create-apim.md)
+- [APIの作成](apim/02-create-api.md)
+- [開発者ポータルの作成](apim/03-create-developer-portal.md)
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
