--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -98,6 +98,16 @@ C#プログラムからのアクセス:
 
 - [Graph Explorer](idplatform/graph-explorer.md)
 
+## ハンズオン: Key Vault
+
+- Key Vaultのリソースを作成する
+  - アクセスポリシーの「アクセス許可モデル」を「Azure ロールベースのアクセス制御」にして「保存」
+  - アクセス制御（IAM）で、自分自身に「キー コンテナー シークレット責任者」ロールを割り当てる
+  - 適当なシークレットを作成する。名前: StorageAccountConnectionString
+- [マネージドIDを有効化する](keyvault/01-managed-id.md)
+  - アクセス制御（IAM）で、マネージドIDに「キー コンテナー シークレット利用者」ロールを割り当てる
+- [Key Vaultのクライアントを作成する](keyvault/02-key-vault-client.md)
+
 ## ハンズオン: Azure API Management
 
 - [API Management インスタンスの作成](apim/01-create-apim.md)
