--- a/AZ-305/lp05.md
+++ b/AZ-305/lp05.md
@@ -1,9 +1,34 @@
 # ラーニングパス5 Well-Architected Framework
 
-■講義資料
+■Azureアーキテクチャ センター
 
-- ラーニングパス5 WAF
-  - Microsoft Azure Well-Architected Framework
+確立されたパターンと手法を使用して Azure でソリューションを設計するためのドキュメント。ガイド、ベストプラクティス、基本原則、パターン集など。
+
+```
+Microsoft Docs
+└Azureアーキテクチャ センター
+ ├アプリケーション アーキテクチャ ガイド
+ ├Microsoft Azure Well-Architected Framework
+ ├クラウド設計パターン
+ ├Azureを使用した業界ソリューション（小売、金融、医療・・・）
+ ├Azureのカテゴリ(コンピュート、データベース・・・)
+ └クラウド導入フレームワーク(CAF)
+```
+
+Azureアーキテクチャ センター(AAC)
+https://docs.microsoft.com/ja-jp/azure/architecture/
+
+アプリケーション アーキテクチャ ガイド
+https://docs.microsoft.com/ja-jp/azure/architecture/guide/
+
+クラウド アプリケーションのベスト プラクティス
+https://docs.microsoft.com/ja-jp/azure/architecture/best-practices/index-best-practices
+
+Microsoft Azure Well-Architected Framework（一連の基本原則。信頼性、セキュリティ、コスト最適化、オペレーショナル・エクセレンス、パフォーマンス効率の5つの柱からなる）
+https://docs.microsoft.com/ja-jp/azure/architecture/framework/
+
+クラウド設計パターン
+https://docs.microsoft.com/ja-jp/azure/architecture/patterns/
 
 ■Microsoft Learn
 
