--- a/AZ-305/lp05.md
+++ b/AZ-305/lp05.md
@@ -1,5 +1,7 @@
 # ラーニングパス5 Well-Architected Framework
 
+※オプション、出題範囲外
+
 ■Azureアーキテクチャ センター
 
 確立されたパターンと手法を使用して Azure でソリューションを設計するためのドキュメント。ガイド、ベストプラクティス、基本原則、パターン集など。
@@ -15,19 +17,19 @@ Microsoft Docs
  └クラウド導入フレームワーク(CAF)
 ```
 
-Azureアーキテクチャ センター(AAC)
+Azureアーキテクチャ センター(AAC): ソリューションを設計するためのガイダンス。
 https://docs.microsoft.com/ja-jp/azure/architecture/
 
-アプリケーション アーキテクチャ ガイド
+アプリケーション アーキテクチャ ガイド: スケーラブル、安全で、回復力がある、高可用性のアプリケーションを設計するための体系化された方法の解説。
 https://docs.microsoft.com/ja-jp/azure/architecture/guide/
 
-クラウド アプリケーションのベスト プラクティス
+クラウド アプリケーションのベスト プラクティス: 信頼性が高く、スケーラブルで、セキュリティで保護されたアプリケーションをクラウドで構築するためのガイドライン。
 https://docs.microsoft.com/ja-jp/azure/architecture/best-practices/index-best-practices
 
-Microsoft Azure Well-Architected Framework（一連の基本原則。信頼性、セキュリティ、コスト最適化、オペレーショナル・エクセレンス、パフォーマンス効率の5つの柱からなる）
+Microsoft Azure Well-Architected Framework: クラウドにおける基本原則とベストプラクティス。信頼性、セキュリティ、コスト最適化、オペレーショナル・エクセレンス、パフォーマンス効率の5つの「柱」で構成。
 https://docs.microsoft.com/ja-jp/azure/architecture/framework/
 
-クラウド設計パターン
+クラウド設計パターン: 信頼性の高い、スケーラブルで安全なアプリケーションをクラウドに構築するためのパターン集。
 https://docs.microsoft.com/ja-jp/azure/architecture/patterns/
 
 ■Microsoft Learn
