--- a/AZ-305/lp05.md
+++ b/AZ-305/lp05.md
@@ -2,6 +2,103 @@
 
 ※オプション、出題範囲外
 
+■Well-Architected Framework
+
+[5つの柱＋設計原則](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-introduction/2-pillars?ns-enrollment-type=learningpath&ns-enrollment-id=learn.azure-well-architected-framework)で構成される
+
+■5つの柱
+
+クラウドアーキテクチャ設計の際に考えるべき5つの「観点」。
+
+- [(1)コスト最適化（無駄なコストの削減）](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-cost-optimization/)
+- [(2)オペレーショナル エクセレンス（自動化による効率的な運用）](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-operational-excellence/)
+- [(3)パフォーマンス効率（スケーリングを活用して必要な性能を確保）](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-performance-efficiency/)
+- [(4)信頼性（障害からの回復、可用性の向上）](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-reliability/)
+- [(5)セキュリティ（IDやリソースの脅威からの保護）](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-security/)
+
+山田コメント: クラウドアーキテクチャの設計をレビューする際に、上記5つの「柱」（観点）でレビューをすると、漏れ・抜けがない。セキュリティ対策は、やればやるほどコストがかかるので、リスク評価を行うことも重要。
+
+■設計原則
+
+特定の「柱」に限定されない、クラウドアーキテクチャ設計時の全般的な原則。
+
+- (1)アーキテクチャの進化を実現
+  - クラウドの新機能を継続的に取り込み、組織のアーキテクチャを進化させる
+- (2)データを使用した意思決定
+  - モニタリングによるデータ収集と活用
+- (3)教育と有効化（イネーブルメント）
+  - チームへの新しいクラウドテクノロジの教育
+  - 組織のベスプラや決定を文書化
+- (4)自動化
+  - 手作業による手間、コスト、ミスを排除
+
+山田コメント: クラウドアーキテクチャは「作ったら終わり」ではない。クラウドの進化に合わせて、自分たちのアーキテクチャ（アプリ）も進化させていく。新機能をすばやく検証するためには、リソースのデプロイを自動化することも重要。
+
+■[柱(1): コスト最適化](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-cost-optimization/)
+
+無駄なコストの削減。
+
+- Azure料金計算ツールの活用
+- Azure Cost Managementの活用
+- リソースで適切なSKU・価格レベルを選択
+- マネージドなサービスの活用（なるべく自分でVMを運用しない）
+- 予約、ハイブリッド特典の活用
+
+山田コメント: 開発・テスト・ステージング環境など、常時置いておく必要がないものは、オンデマンドでデプロイし、不要になったら削除する。
+
+■[柱(2): オペレーショナル エクセレンス](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-operational-excellence/)
+
+自動化による効率的な運用。
+
+- Azure DevOps / GitHubの活用(CI/CD)
+- マイクロサービスアーキテクチャの採用
+- 監視（モニタリングのサービスの活用、データ収集の自動化）
+- IaCによるリソース作成の自動化(ARM/Bicep)
+- Azure Automationの活用
+- テストの自動化
+
+山田コメント: DevOps（CI/CD）を取り入れるには、サービスやツールの採用だけではなく、人、組織の変革も必要。
+
+■[柱(3): パフォーマンス効率](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-performance-efficiency/)
+
+スケーリングを活用して必要な性能を確保。
+
+- スケールアウト・イン・アップ・ダウンの理解と活用
+- サーバーレスのサービスの活用
+- ネットワークの最適化、キャッシュの活用
+- 適切なストレージの選択
+- アプリのモニタリング、ボトルネックの把握と解消
+
+山田コメント: 「事前にしっかり設計をしてあとは変えない」ではなく、モニタリングにより現状を把握し、スケーリングにより最適化を行うことが重要。
+
+■[柱(4): 信頼性](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-reliability/)
+
+障害からの回復、可用性の向上。
+
+- SLA、運用目標の定義
+- 可用性セット・可用性ゾーンの活用
+- 負荷分散におけるヘルスチェックの活用
+- リージョン間のレプリケーションによる災害対策
+- バックアップの実施、復旧のテスト
+
+山田コメント: 可用性ゾーンに対応したAzureのサービスが増加しており、各リージョンのゾーン対応も進んでいる。「データセンター障害やゾーン障害といった一時的な問題に対しては、ゾーンを活用」「大規模な災害への対策としては、リージョン間レプリケーションを活用」というように、複数のゾーンとリージョンの活用を検討。
+
+■[柱(5): セキュリティ](https://docs.microsoft.com/ja-jp/learn/modules/azure-well-architected-security/)
+
+IDやリソースの脅威からの保護。
+
+- 「多層防御」戦略の活用
+- 「ゼロトラスト」戦略の採用（継続的な検証を行う）
+- Azure ADを活用したユーザーID管理
+- ロール（RBAC）の活用
+- マネージドIDの活用
+- 暗号化の活用
+- ネットワークサービスのセキュリティ機能の活用（WAF等）
+- アプリ開発時のセキュリティ設計の組み込み
+- シークレットの保護（機密情報をKey Vaultで保護する）
+
+山田コメント: 認証・認可をよりセキュアに、より便利にするには、Azure AD認証（マネージドID）＋ロールを活用。対応サービスも増えている。
+
 ■Azureアーキテクチャ センター
 
 確立されたパターンと手法を使用して Azure でソリューションを設計するためのドキュメント。ガイド、ベストプラクティス、基本原則、パターン集など。
