--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -30,7 +30,7 @@
   - Visual Studio Codeを起動し、ターミナルを開き、下記を投入
     ```
     cd ~/Documents
-    dotnet new consoel -n blobapp1
+    dotnet new console -n blobapp1
     code -r blobapp1
     ```
 - 開かれたプロジェクトで再度 ターミナルを開き `dotnet add package azure.storage.blobs` を実行(プロジェクトに、BlobのAzure SDKを追加)
