--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -26,6 +26,7 @@
 ## ハンズオン: Blob Storage
 
 - ストレージアカウントの作成
+  - 接続文字列をコピーして、メモ帳等に貼り付けておく
 - 昨日作成したVMで、Visual Studio Codeを使用してプロジェクトを作る
   - Visual Studio Codeを起動し、ターミナルを開き、下記を投入
     ```
@@ -35,8 +36,9 @@
     ```
 - 開かれたプロジェクトで再度 ターミナルを開き `dotnet add package azure.storage.blobs` を実行(プロジェクトに、BlobのAzure SDKを追加)
 - [サンプルコード](../AZ-204/sample/blob/Program.cs) を Program.cs に貼り付けて実行(dotnet run)
- （適当にストレージアカウントを作り、接続文字列をコピーし、
-    サンプルコード実行時に指定してください）
+ （サンプルコード実行後に、接続文字列を入力するように求められるので、コピーしておいた接続文字列を入力してください）
+- `CreateContainer` などのコマンドを実行して動作を確認
+  - 使えるコマンドについてはソースコード内を参照してください
 - Azure公式ドキュメントの「[クイックスタート](https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-quickstart-blobs-dotnet?tabs=environment-variable-windows)」「[サンプル](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-samples-dotnet?toc=/azure/storage/blobs/toc.json)」を確認
 - [AZ-204ラボ](https://github.com/MicrosoftLearning/AZ-204JA-DevelopingSolutionsforMicrosoftAzure/blob/master/Instructions/Labs/AZ-204_lab_03.md)を確認（余裕があれば実施）
 
