--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -116,6 +116,10 @@ C#プログラムからのアクセス:
 - [APIの作成](apim/02-create-api.md)
 - [開発者ポータルの作成](apim/03-create-developer-portal.md)
 
+## ハンズオン: Service Bus
+
+- [メッセージの送信と受信](https://microsoftlearning.github.io/AZ-204JA-DevelopingSolutionsforMicrosoftAzure/Instructions/Labs/AZ-204_lab_10.html)
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
