--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -119,6 +119,9 @@ C#プログラムからのアクセス:
 ## ハンズオン: Service Bus
 
 - [メッセージの送信と受信](https://microsoftlearning.github.io/AZ-204JA-DevelopingSolutionsforMicrosoftAzure/Instructions/Labs/AZ-204_lab_10.html)
+- 発展（オプション）: 上記サンプルではService Busへの接続のために接続文字列を使用しています.
+  - [Azure AD認証＋ロールを使用するようにしてください。](https://docs.microsoft.com/ja-jp/azure/service-bus-messaging/authenticate-application)
+  - または、接続文字列をKey Vaultに格納するようにしてください。
 
 ## ハンズオン: クリーンナップ（リソースの削除）
 
