--- a/AZ-305/m01.md
+++ b/AZ-305/m01.md
@@ -5,6 +5,7 @@
   - [ロールベースのアクセス制御（RBAC）](../AZ-303/mod10-01-rbac.md)
   - [Azure Policy](../AZ-303/mod10-03-azure-policy.md)
   - [Azure Blueprints](../AZ-303/mod10-04-azure-blueprints.md)
+  - [リソースタグ](../general/tag.md)
   - [知識チェック](day1-lp01-m01-check.md)
 - ケーススタディ: [ガバナンス ソリューションを設計する](https://github.com/MicrosoftLearning/AZ-305-DesigningMicrosoftAzureInfrastructureSolutions.ja-jp/blob/main/Instructions/CaseStudy/01-Governance.md)
   - 状況
