--- a/AZ-305/m01.md
+++ b/AZ-305/m01.md
@@ -19,6 +19,7 @@
     - 監査担当者には、どんな権限（ロール）があればよいか？ そのロールはどのスコープで割り当てればよいか？
     - 仮想マシンのサイズを制限するにはどうすればよいか？
     - 仮想マシンが特定の命名規則に従っているようにするにはどうすればよいか？
+  - [参考](casestudy1-solution.md): ご自身で上記を考えた後に見てください
 
 ## モジュール 1: [ガバナンスの設計](https://docs.microsoft.com/ja-jp/learn/modules/design-governance/)
 - ユニット 1: [はじめに](https://docs.microsoft.com/ja-jp/learn/modules/design-governance/1-introduction)
