--- a/AZ-305/m02.md
+++ b/AZ-305/m02.md
@@ -1,26 +1,25 @@
 # 02 コンピューティングソリューション
 
-
-  - モジュール1: コンピューティング
-    - 仮想マシン
-      - [VM](../AZ-303/mod04-01-vm.md)
-      - [VMSS](../AZ-303/mod04-03-vmss.md)
-    - PaaS
-      - [Azure App Service](app-service.md)
-    - コンテナー型仮想化
-      - [Azure Container Instances](../AZ-303/mod13-01-aci.md)
-      - [Azure Kubernetes Service](../AZ-400/mod16.md)
-    - Function as a Service
-      - [Azure Function](../AZ-303/mod14-02-functions.md)
-    - ローコード/ノーコード/統合
-      - [Azure Logic Apps](../AZ-204/mod99-01-logicapp.md)
-    - バッチ
-      - [Azure Batch](azure-batch.md)
-    - [知識チェックとケーススタディ](day3-lp4-m1-check.md)
-
-ケーススタディ: 30分演習、30分発表
-
-- [コンピュート](casestudy2.md)
+- モジュール1: コンピューティング
+  - 仮想マシン
+    - [VM](../AZ-303/mod04-01-vm.md)
+    - [VMSS](../AZ-303/mod04-03-vmss.md)
+  - PaaS
+    - [Azure App Service](app-service.md)
+  - コンテナー型仮想化
+    - [Azure Container Instances](../AZ-303/mod13-01-aci.md)
+    - [Azure Kubernetes Service](../AZ-400/mod16.md)
+  - Function as a Service
+    - [Azure Function](../AZ-303/mod14-02-functions.md)
+  - ローコード/ノーコード/統合
+    - [Azure Logic Apps](../AZ-204/mod99-01-logicapp.md)
+  - バッチ
+    - [Azure Batch](azure-batch.md)
+  - マイクロサービス
+    - [Azure Container Apps](container-apps.md)
+  - [知識チェックとケーススタディ](day3-lp4-m1-check.md)
+  - ケーススタディ: 30分演習、30分発表
+    - [コンピュート](casestudy2.md)
 
 ## モジュール : [コンピューティング ソリューションを設計する](https://docs.microsoft.com/ja-jp/learn/modules/design-compute-solution/)
 - ユニット 1: [はじめに](https://docs.microsoft.com/ja-jp/learn/modules/design-compute-solution/1-introduction)
