--- a/AZ-305/m02.md
+++ b/AZ-305/m02.md
@@ -1,6 +1,6 @@
 # 02 コンピューティングソリューション
 
-- モジュール1: コンピューティング
+- モジュール: コンピューティング
   - 仮想マシン
     - [VM](../AZ-303/mod04-01-vm.md)
     - [VMSS](../AZ-303/mod04-03-vmss.md)
