--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -63,6 +63,8 @@ C#プログラムからのアクセス:
     - Newtonsoft.Json ([NuGet](https://www.nuget.org/packages/Newtonsoft.Json/))
 - [サンプルコード](cosmos/select.md)
 
+※[Windows Server VMでの日本語文字化け対策](japanese.md)
+
 ## ハンズオン: Docker/ACI/ACR
 
 (1)Docker用Linux VMの準備
