--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -104,10 +104,31 @@ C#プログラムからのアクセス:
 
 ## ハンズオン: Key Vault
 
-- Key Vaultのリソースを作成する
-  - アクセスポリシーの「アクセス許可モデル」を「Azure ロールベースのアクセス制御」にして「保存」
-  - アクセス制御（IAM）で、自分自身に「キー コンテナー シークレット責任者」ロールを割り当てる
-  - 適当なシークレットを作成する。名前: StorageAccountConnectionString
+(1)(2)いずれかの手順で、「アクセス許可モデル」が「Azure ロールベースのアクセス制御」であるKey Vaultを準備します。
+
+■(1)新しくKey Vaultを作る（おすすめ）:
+
+- Key Vaultのリソースを新規作成する場合
+  - キーコンテナー一覧＞＋作成
+  - リソースグループ、名前を適当に指定
+  - 次へ
+  - 「アクセス許可モデル」で「Azure ロールベースのアクセス制御」を選択
+  - 「確認および作成」、「作成」
+
+
+■(2)すでに作成済みのKey Vaultを使用する場合:
+
+- 「設定＞アクセスポリシー」の「アクセス許可モデル」を確認
+- 「コンテナーのアクセス ポリシー」が選択されている場合は以下を実行
+  - キーコンテナーの「アクセス制御（IAM）」で、「＋追加」＞「ロール割り当ての追加」、ロール「所有者」、メンバーに自分自身（画面右上に表示されているユーザー）を選んで、割り当て
+  - 割り当て後、ロールが効き始めるまで3分ほど待ちます。
+- アクセスポリシーの「アクセス許可モデル」を「Azure ロールベースのアクセス制御」にして「保存」
+
+上記(1)(2)いずれかで準備したKey Vaultに対し、以下を実行します。
+
+■ロールの割り当て
+- キーコンテナーの「アクセス制御（IAM）」で、自分自身に「キー コンテナー シークレット責任者」ロールを割り当てる
+- 適当なシークレットを作成する。名前: StorageAccountConnectionString
 - [マネージドIDを有効化する](keyvault/01-managed-id.md)
   - アクセス制御（IAM）で、マネージドIDに「キー コンテナー シークレット利用者」ロールを割り当てる
 - [Key Vaultのクライアントを作成する](keyvault/02-key-vault-client.md)
