--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -119,8 +119,8 @@ C#プログラムからのアクセス:
 - 「設定＞アクセスポリシー」の「アクセス許可モデル」を確認
 - 「コンテナーのアクセス ポリシー」が選択されている場合は以下を実行
   - キーコンテナーの「アクセス制御（IAM）」で、「＋追加」＞「ロール割り当ての追加」、ロール「所有者」、メンバーに自分自身（画面右上に表示されているユーザー）を選んで、割り当て
-  - 割り当て後、ロールが効き始めるまで3分ほど待ちます。
-- アクセスポリシーの「アクセス許可モデル」を「Azure ロールベースのアクセス制御」にして「保存」
+  - 割り当て後、ロールが効き始めるまで5分ほど待つ。
+  - アクセスポリシーの「アクセス許可モデル」を「Azure ロールベースのアクセス制御」にして「保存」
 
 上記(1)(2)いずれかで準備したKey Vaultに対し、以下を実行します。
 
