--- a/AZ-500/mod03/mod03-03.md
+++ b/AZ-500/mod03/mod03-03.md
@@ -71,13 +71,15 @@ https://docs.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview
 - SASの生成時にその名前を指定するという形で、ポリシーを参照することができる
 - サービスSASのみ。
 
-# Azure AD ストレージ認証
 
-(上記「Azure AD + RBACロール」で説明済み)
+# Azure Storageの暗号化
 
-# Storage Service Encryption
+https://learn.microsoft.com/ja-jp/azure/storage/common/storage-service-encryption
 
-■Storage Service Encryption (SSE) 
+Storage Service Encryption / service-side encryption (SSE)
+
+※Azure サポートチームによるSSEの解説
+https://jpaztech1.z11.web.core.windows.net/AzureDiskEncryption(ADE)%E3%81%A8StorageServiceEncryption(SSE)%E3%81%AE%E3%81%94%E7%B4%B9%E4%BB%8B.html
 
 ■保存時
 - ストレージに書き込まれるデータはすべてデフォルトで暗号化される(SSE)
@@ -109,11 +111,13 @@ https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-blob-immutable-stor
 https://docs.microsoft.com/ja-jp/azure/storage/files/storage-files-identity-auth-active-directory-enable
 
 Azure Files（ストレージアカウントのファイル共有）では、サーバー メッセージ ブロック (SMB) 経由の ID ベースの認証が利用できる。
-- オンプレミス Active Directory Domain Services (AD DS) 
-- Azure Active Directory Domain Services (Azure AD DS) 
+- オンプレミス Active Directory Domain Services (AD DS)のID
+- Azure Active Directory Domain Services (Azure AD DS)のID
 
+ID が Azure ファイル共有内のデータにアクセスしようとした場合、その要求はドメイン サービス (AD DS または Azure AD DS) に送信され、ID が認証されます。 認証が成功した場合、Kerberos トークンが返されます。 クライアントは Kerberos トークンが含まれる要求を送信し、Azure ファイル共有はそのトークンを使用して要求を承認します。
 
-ID が Azure ファイル共有内のデータにアクセスしようとした場合、その要求はドメイン サービス (AD DS または Azure AD DS) に送信され、ID が認証されます。 認証が成功した場合、Kerberos トークンが返されます。 クライアントは Kerberos トークンが含まれる要求を送信し、Azure ファイル共有はそのトークンを使用して要求を承認します。 Azure ファイル共有は、アクセス資格情報ではなく、Kerberos トークンのみを受信します。
+※具体的な手順例
+https://www.cloudou.net/storage/blob009/
 
 # 安全な転送が必須
 
