--- a/AZ-500/mod03/mod03-04.md
+++ b/AZ-500/mod03/mod03-04.md
@@ -25,7 +25,7 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#auth
 - 認証
   - SQL認証
     - 「サーバー管理者」のユーザー名とパスワードを使った認証
-    - 「サーバー」作成時に指定される
+    - 「サーバー」作成時に指定
   - Azure Active Directory認証
     - Azure ADのIDを使用した認証
 - 承認
@@ -103,9 +103,15 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/data-discovery-and-cla
 - データベースをスキャンして、データベース内の機密データの検出、分類、ラベル付け、およびレポート作成を行う
 - ビジネス、財務、医療、個人情報など
 
+![](images/ss-2022-09-30-09-27-07.png)
+
 # TLS
 
-- SQL Database、SQL Managed Instance、Azure Synapse Analytics では、すべての接続に対して常に暗号化 (SSL/TLS) が適用される。
+※TLS=Transport Layer Security. SSLの後継規格。データを暗号化して送受信するプロトコル。
+https://e-words.jp/w/TLS.html
+
+
+- SQL Database、SQL Managed Instance、Azure Synapse Analytics では、すべての接続に対して **常に** 暗号化 (SSL/TLS) が適用される。
 - 接続文字列での Encrypt または TrustServerCertificate の設定に**関係なく**、すべてのデータがクライアントとサーバー間の "移動中" に暗号化されることが保証される。
 
 # 動的なデータ マスキング(DDM)
@@ -115,6 +121,9 @@ https://docs.microsoft.com/ja-jp/sql/relational-databases/security/dynamic-data-
 - データが表示される際にマスクをかける。090-1234-5678 → 090-XXXX-XXXX 等
 - 特権のないユーザーに対してデリケートなデータをマスクし、データの公開を制限する
 - DDM によって、データベース内のデータが変更されることはない。
+
+![](images/ss-2022-09-30-09-29-02.png)
+https://blog.engineer-memo.com/2015/05/16/sql-database-%E3%81%AE%E5%8B%95%E7%9A%84%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%B9%E3%82%AF%E3%81%AE%E3%80%8C%E6%8B%A1%E5%BC%B5%E5%88%B6%E9%99%90%E3%81%AE%E4%BD%BF%E7%94%A8%E3%80%8D%E3%81%AB/
 
 # Always Encrypted
 
