--- a/AZ-305/m01.md
+++ b/AZ-305/m01.md
@@ -1,5 +1,8 @@
 # 01 設計のガバナンス
 
+※元のタイトルは「Design governance」であり、他のモジュールの「Design ～」が「～の設計」と訳されていることから「ガバナンスの設計」が正しい訳と思われる。「ガバナンス」（統治）は、ここでは、Azureのロールやポリシーを組織全体に適用して、Azureの運用をコントロールすることを指す。
+
+- [Tailwind Traders（テールウィンドトレーダーズ）社について](tailwind-traders.md)
 - 講義資料
   - [管理グループ、サブスクリプション、リソースグループ](../AZ-303/mod01-02-azure.md)
   - [ロールベースのアクセス制御（RBAC）](../AZ-303/mod10-01-rbac.md)
@@ -7,19 +10,7 @@
   - [Azure Blueprints](../AZ-303/mod10-04-azure-blueprints.md)
   - [リソースタグ](../general/tag.md)
   - [知識チェック](day1-lp01-m01-check.md)
-- ケーススタディ: [ガバナンス ソリューションを設計する](https://github.com/MicrosoftLearning/AZ-305-DesigningMicrosoftAzureInfrastructureSolutions.ja-jp/blob/main/Instructions/CaseStudy/01-Governance.md)
-  - 状況
-    - 複数の事業部があり、各事業部には複数の部門がある。
-    - 各部門でAzureサブスクリプションを利用している。
-    - 監査担当者は、すべての事業部のAzureサブスクリプションの使用状況を把握する必要がある。
-    - 仮想マシンのサイズを制限する必要がある。
-    - 仮想マシンが特定の命名規則に従っている必要がある。
-  - 設計 - 各自でここを考えてください
-    - 管理グループはどのように構成すべきか？
-    - 監査担当者には、どんな権限（ロール）があればよいか？ そのロールはどのスコープで割り当てればよいか？
-    - 仮想マシンのサイズを制限するにはどうすればよいか？
-    - 仮想マシンが特定の命名規則に従っているようにするにはどうすればよいか？
-  - [参考](casestudy1-solution.md): ご自身で上記を考えた後に見てください
+  - [ケーススタディ: ガバナンスの設計](casestudy-governance.md)
 
 ## モジュール 1: [ガバナンスの設計](https://docs.microsoft.com/ja-jp/learn/modules/design-governance/)
 - ユニット 1: [はじめに](https://docs.microsoft.com/ja-jp/learn/modules/design-governance/1-introduction)
