--- a/AZ-305/lp06.md
+++ b/AZ-305/lp06.md
@@ -13,7 +13,7 @@
 ■ケーススタディ
 
 - [認証および承認ソリューションを設計する](https://github.com/MicrosoftLearning/AZ-305-DesigningMicrosoftAzureInfrastructureSolutions.ja-jp/blob/main/Instructions/CaseStudy/07-Access.md)
-- [非リレーショナル・データ](casestudy1.md)
+- [非リレーショナル・データ](casestudy-nonrdb.md)
 - [コンピュート](casestudy2.md)
 
 
