--- a/AZ-305/m03.md
+++ b/AZ-305/m03.md
@@ -1,14 +1,15 @@
 # ストレージ・非RDB
 
-  - ストレージアカウント
-    - [ストレージアカウントの概要](../AZ-303/mod06-01-storage-account.md)
-    - [共有アクセス署名(SAS)](sas.md)
-    - [アクセス ポリシー](blob-container-access-policy.md)
-    - [知識チェックとケーススタディ](day2-lp3-m1-check.md)
-  - NoSQL
-    - [Azure Table Storage](../AZ-104/mod07-07-table.md)
-    - [Cosmos DB](../AZ-303/mod07-02-cosmosdb.md)
-
+- ストレージアカウント
+  - [ストレージアカウントの概要](../AZ-303/mod06-01-storage-account.md)
+  - [共有アクセス署名(SAS)](sas.md)
+  - [アクセス ポリシー](blob-container-access-policy.md)
+  - [知識チェック](day2-lp3-m1-check.md)
+- NoSQL
+  - [Azure Table Storage](../AZ-104/mod07-07-table.md)
+  - [Cosmos DB](../AZ-303/mod07-02-cosmosdb.md)
+- ケーススタディ
+  - [ケーススタディ](casestudy-nonrdb.md)
 
 ## モジュール 1: [非リレーショナルデータ用にデータ ストレージ ソリューションを設計する](https://docs.microsoft.com/ja-jp/learn/modules/design-data-storage-solution-for-non-relational-data/)
 - ユニット 1: [はじめに](https://docs.microsoft.com/ja-jp/learn/modules/design-data-storage-solution-for-non-relational-data/1-introduction)
