--- a/AZ-305/m04.md
+++ b/AZ-305/m04.md
@@ -4,6 +4,7 @@
   - [Azure SQL Databaseの概要](../AZ-304/mod06-03-azure-sql.md)
   - [Azure SQL Databaseのサーバー/データベース](../AZ-303/mod08-01-sqldb.md)
   - [Azure SQL Edge](sql-edge.md)
+  - [Azure SQL Database for PostgreSQL/MySQL/MariaDB](azure-database.md)
   - [知識チェック](day2-lp3-m2-check.md)
 
 ## モジュール 2: [リレーショナル データ用にデータ ストレージ ソリューションを設計する](https://docs.microsoft.com/ja-jp/learn/modules/design-data-storage-solution-for-relational-data/)
