--- a/AZ-305/m07.md
+++ b/AZ-305/m07.md
@@ -1,14 +1,36 @@
-- モジュール 認証・認可ソリューションの設計
+# 認証・認可ソリューションの設計
+
+<!--
   - [ID およびアクセス管理のベスト プラクティス](../AZ-304/mod04-01-id.md)
-  - [多要素認証のソリューション](../AZ-304/mod04-02-mfa.md)
-  - [ID インフラストラクチャをセキュリティ保護するステップ](../AZ-304/mod04-03-secure-identity.md)
-  - [Azure Active Directory B2B](../AZ-304/mod04-06-b2b.md)
-  - [Azure Active Directory B2C](../AZ-303/mod01-08-aad-b2c.md)
-  - [条件付きアクセス](../AZ-303/mod01-06-conditional-access.md)
-  - [Identity Protection](../AZ-303/mod01-05-idp.md)
-  - [アクセスレビュー](../AZ-303/mod10-02-access-review.md)
-  - [Azure Key Vaults](../AZ-303/mod11-02-keyvault.md)
-  - [知識チェック](day1-lp01-m02-check.md)
+- [ID インフラストラクチャをセキュリティ保護するステップ](../AZ-304/mod04-03-secure-identity.md)
+-->
+
+■Azure ADの概要
+
+- [Azure ADの基礎](../AzureAD/azure-ad.md)
+- PDF: [Azure ADの機能](../AZ-500/pdf/mod1/Azure%20AD機能.pdf)
+- [多要素認証のソリューション](../AZ-304/mod04-02-mfa.md)
+- [Azure Active Directory B2B](../AZ-304/mod04-06-b2b.md)
+- [Azure Active Directory B2C](../AZ-303/mod01-08-aad-b2c.md)
+
+■Azure ADのセキュリティ機能
+
+- [条件付きアクセス](../AZ-303/mod01-06-conditional-access.md)
+  - ユーザー、アプリ、端末などの条件により、アクセスを許可、ブロック、追加の認証を要求。
+- [Identity Protection](../AZ-500/mod01/mod01-03-idp.md)
+  - 不審なサインインなどを検出
+- [アクセスレビュー](../AZ-303/mod10-02-access-review.md)
+  - ユーザーのグループ所属等を定期的にレビューし、不要な割り当てを削除。
+
+■アプリからのID/シークレット利用
+
+- [サービスプリンシパル](service-principal.md)
+- [マネージドID](managed-id.md)
+- [Azure Key Vaults](../AZ-303/mod11-02-keyvault.md)
+
+■知識チェック
+
+- [知識チェック](day1-lp01-m02-check.md)
 
 
 ## モジュール: [認証と認可のソリューションを設計する](https://docs.microsoft.com/ja-jp/learn/modules/design-authentication-authorization-solutions/)
