--- a/AZ-304/mod04-06-b2b.md
+++ b/AZ-304/mod04-06-b2b.md
@@ -1,53 +1,14 @@
 
-# Azure AD External Identities
 
-■Azure AD External Identitiesのソリューション
-
-※「外部ID」とも
-
-「B2Bコラボレーション」と「AzureAD B2C」が含まれる。
-
-- Azure AD External Identities（外部ID）
-  - B2B コラボレーション
-    - 関連会社等のユーザーとコラボレーション（共同作業）する場合に利用
-    - 外部ユーザーを自分のテナントに "ゲスト" ユーザーとして招待
-  - Azure AD B2C
-    - 一般ユーザーを、自社で開発したアプリケーションにサインインさせる場合に利用
-    - 消費者、顧客、または一般ユーザーが、自分のGoogle アカウントなどを使用してサインイン
-
-※B2BとB2C
-- B2B: Business to Business
-- B2C: Business to Consumer
-
-**本ページでは以降B2B コラボレーション（Azure AD B2B）について解説。**
-
-
-# Azure AD B2B コラボレーション
-
-■Azure AD B2B コラボレーションとは
+# Azure AD B2B
 
 外部ユーザーをゲストとして招待する機能。
 
-外部ユーザーに、自分の組織で管理しているアプリケーションへのアクセスを許可することができる。
+https://learn.microsoft.com/ja-jp/azure/active-directory/external-identities/what-is-b2b
 
-■Azure AD B2B でサポートされる「IDプロバイダー」
+■Azure AD B2B コラボレーションとは
 
-※IDプロバイダー（IdP）: IDの登録、認証などを提供するサービス。Azure ADもIDプロバイダーの一種。
-
-https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account
-
-
-B2Bでは以下のIDプロバイダーを使用できる。
-
-- 設定不要
-  - [Azure AD（職場または学校アカウント）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account)
-  - [Microsoftアカウント](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/microsoft-account)
-- 設定が必要
-  - [Gmail アカウント（Googleフェデレーション）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/google-federation)
-    - ※Google Workspace ドメインとのフェデレーションを行うには「SAML および WS-Fed ベースの ID プロバイダー」を使用
-  - [Facebook](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/facebook-federation)
-  - [SAML および WS-Fed ベースの ID プロバイダー](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/direct-federation)
-
+外部ユーザーに、自分の組織で管理しているアプリケーションへのアクセスを許可する。
 
 ■ゲストユーザーの招待の流れ
 
@@ -83,6 +44,24 @@ Azure ADテナント2（関連会社等）
 
 サインインが完了したら、テナント1のゲストユーザーとして、テナント1（のアプリケーションや、Azure サブスクリプション）を利用することができる。
 
+■Azure AD B2B でサポートされる「IDプロバイダー」
+
+※IDプロバイダー（IdP）: IDの登録、認証などを提供するサービス。Azure ADもIDプロバイダーの一種。
+
+https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account
+
+
+B2Bでは以下のIDプロバイダーを使用できる。
+
+- 設定不要
+  - [Azure AD（職場または学校アカウント）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account)
+  - [Microsoftアカウント](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/microsoft-account)
+- 設定が必要
+  - [Gmail アカウント（Googleフェデレーション）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/google-federation)
+    - ※Google Workspace ドメインとのフェデレーションを行うには「SAML および WS-Fed ベースの ID プロバイダー」を使用
+  - [Facebook](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/facebook-federation)
+  - [SAML および WS-Fed ベースの ID プロバイダー](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/direct-federation)
+
 
 ■ゲストユーザーの招待方法
 
@@ -91,8 +70,6 @@ Azure ADテナント2（関連会社等）
 - CSVを使用して、一括で多数のユーザーを招待する: https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/bulk-invite-powershell
 
 ■ゲストユーザーがメールを受け取れない場合
-
-
 
 ゲストユーザーがメールを受け取れない場合でも、管理者はPowerShellを使ってユーザーを招待することができる。
 
