--- a/AZ-305/m09.md
+++ b/AZ-305/m09.md
@@ -1,14 +1,48 @@
 
 # モジュール: ネットワーク ソリューション
 
-- オンプレミス接続
-  - [VPN](../AZ-303/mod03-03-vpn.md)
-  - [ExpressRoute](../AZ-304/mod02-04-hybrid-network.md)
-- ネットワークアクセスの制御
-  - [NSG と ASG](../AZ-303/mod05-05-nsg-asg.md)
-- [Azure Firewall](../AZ-303/mod05-06-azure-firewall.md)
-- [知識チェック](day3-lp4-m3-check.md)
+■オンプレミス接続の設計
 
+- [VPN](../AZ-303/mod03-03-vpn.md)
+- [ExpressRoute](../AZ-304/mod02-04-hybrid-network.md)
+
+■ネットワーク接続サービスの設計
+
+- [PDF資料: ピアリング、ハブ&スポーク モデル](../network/ハブ・スポーク.pdf)
+- [ルーティング](../network/udr.md)
+
+■アプリケーション配信(負荷分散)
+
+[PDF: 負荷分散サービスのまとめ](../AZ-500/pdf/mod2/負荷分散サービス.pdf)
+
+リージョン内の負荷分散:
+
+- [Azure Load Balancer](../AZ-303/mod05-01-lb.md)
+  - L4(TCP/UDP)
+- [Azure Application Gateway](../AZ-303/mod05-02-appgw.md)
+  - L7(Web用)
+
+リージョン間の負荷分散:
+
+- [Azure Traffic Manager](../AZ-303/mod05-03-traffic-manager.md)
+  - DNSベースの負荷分散
+- [Azure Front Door](../network/front-door.md)
+  - L7(Web用)
+
+静的コンテンツの配信の高速化:
+
+- [Azure CDN](../AZ-204/mod12-02-cdn.md)
+
+アプリケーション保護:
+
+- [Azure DDos Protection](../network/ddos-protection.md)
+- [ネットワークセキュリティグループ(NSG) / アプリケーションセキュリティグループ(ASG)](../AZ-303/mod05-05-nsg-asg.md)
+- [Azure Firewall](../AZ-303/mod05-06-azure-firewall.md)
+  - [NSGとAzure Firwallの違い](https://jpaztech.github.io/blog/network/difference-nsg-fw/)
+
+知識チェック:
+
+- [知識チェック](day3-lp4-m3-check.md)
 
 ## モジュール 3: [ネットワーク ソリューションを設計する](https://docs.microsoft.com/ja-jp/learn/modules/design-network-solutions/)
 - ユニット 1: [はじめに](https://docs.microsoft.com/ja-jp/learn/modules/design-network-solutions/1-introduction)
