--- a/AZ-305/m09.md
+++ b/AZ-305/m09.md
@@ -29,11 +29,11 @@
 - [Azure Front Door](../network/front-door.md)
   - L7(Web用)
 
-静的コンテンツの配信の高速化:
+■静的コンテンツの配信の高速化
 
 - [Azure CDN](../AZ-204/mod12-02-cdn.md)
 
-アプリケーション保護:
+■アプリケーション保護
 
 - [Azure DDos Protection](../network/ddos-protection.md)
 - [ネットワークセキュリティグループ(NSG) / アプリケーションセキュリティグループ(ASG)](../AZ-303/mod05-05-nsg-asg.md)
