--- a/AZ-305/m10.md
+++ b/AZ-305/m10.md
@@ -1,4 +1,5 @@
   - モジュール2 バックアップとディザスターリカバリー
+    - PDF資料: [Azure Backupとバックアップセンター 概要](pdf/Azure%20Backup.pdf)
     - [Azure Backup](../AZ-303/mod12-02-backup.md)
     - [Azure Site Recovery](../AZ-303/mod12-03-site-recovery.md)
     - [知識チェック](day2-lp2-m2-check.md)
