--- a/AZ-500/mod02/mod02-04.md
+++ b/AZ-500/mod02/mod02-04.md
@@ -25,7 +25,7 @@
 # コンテナー型仮想化におけるセキュリティ対策
 
 - 強力な「分離」が利用できるコンテナー実行環境の利用。
-  - Azure Container Instances (ACI)では「ハイパーバイザーレベルのセキュリティが提供される（VM と同じレベルで、各アプリケーションが分離される）
+  - Azure Container Instances (ACI)では「ハイパーバイザーレベルのセキュリティ」が提供される（VM と同じレベルで、各アプリケーションが分離される）
 - コンテナーに対してセキュリティスキャンを実行する
   - Azure Container Registry (ACR)を使用して、スキャンを実行できる（後述）
 - 信頼できるコンテナーレジストリ（イメージの配布元）を使用する
