--- a/AZ-305/m01.md
+++ b/AZ-305/m01.md
@@ -1,6 +1,6 @@
-# 01 設計のガバナンス
+# 01 ガバナンスの設計
 
-※元のタイトルは「Design governance」であり、他のモジュールの「Design ～」が「～の設計」と訳されていることから「ガバナンスの設計」が正しい訳と思われる。「ガバナンス」（統治）は、ここでは、Azureのロールやポリシーを組織全体に適用して、Azureの運用をコントロールすることを指す。
+※「ガバナンス」（統治）は、ここでは、Azureのロールやポリシーを組織全体に適用して、Azureの運用をコントロールすることを指す。
 
 - [Tailwind Traders（テールウィンドトレーダーズ）社について](tailwind-traders.md)
 - 講義資料
