--- a/AZ-700/m01.md
+++ b/AZ-700/m01.md
@@ -1,26 +1,21 @@
 ■VNet
 
-講義:
-ラボ: [M01-ユニット 4 Azure で仮想ネットワークを設計および実装する](https://github.com/MicrosoftLearning/AZ-700-Designing-and-Implementing-Microsoft-Azure-Networking-Solutions.ja-jp/blob/main/Instructions/Exercises/M01-Unit%204%20Design%20and%20implement%20a%20Virtual%20Network%20in%20Azure.md)
-時間: 20分
+講義: [仮想ネットワーク](../network/vnet.md), [サブネット](../network/subnet.md), [ハブ&スポーク トポロジー](../network/ハブ・スポーク.pdf)
+ラボ: [M01-ユニット4](lab-m01-u04.md)
 
-■パブリックIPアドレス
+■パブリック/プライベートIPアドレス
 
-講義:
+講義: [パブリック/プライベートIPアドレス](../network/ip-address.md)
 
 ■DNS
 
-講義:
-
-ラボ: [M01 - ユニット 6 Azure で DNS 設定を構成する](https://github.com/MicrosoftLearning/AZ-700-Designing-and-Implementing-Microsoft-Azure-Networking-Solutions.ja-jp/blob/main/Instructions/Exercises/M01-Unit%206%20Configure%20DNS%20settings%20in%20Azure.md)
-時間: 25分
+講義: [Azure DNS](../AZ-104/mod04-05-dns.md)
+ラボ: [M01-ユニット6](lab-m01-u06.md)
 
 ■ピアリング
 
 講義:
-
-ラボ: [M01-ユニット 8 グローバル仮想ネットワーク ピアリングを使用して 2 つの Azure 仮想ネットワークを接続する](https://github.com/MicrosoftLearning/AZ-700-Designing-and-Implementing-Microsoft-Azure-Networking-Solutions.ja-jp/blob/main/Instructions/Exercises/M01-Unit%208%20Connect%20two%20Azure%20Virtual%20Networks%20using%20global%20virtual%20network%20peering.md)
-時間: 20分
+ラボ: [M01-ユニット8](lab-m01-u08.md)
 
 ■ルーティング
 
