--- a/AZ-700/m01.md
+++ b/AZ-700/m01.md
@@ -6,7 +6,7 @@
   - [仮想ネットワーク](../network/vnet.md)
   - [サブネット](../network/subnet.md)
   - PDF資料: [ハブ&スポーク トポロジー](../network/ハブ・スポーク.pdf)
-- ラボ: [M01-ユニット4](lab-m01-u04.md)
+- ラボ: [M01-ユニット4 Azure で仮想ネットワークを設計および実装する](lab-m01-u04.md)
 
 ■パブリック/プライベートIPアドレス
 
@@ -15,12 +15,12 @@
 ■DNS（ドメインネームシステム）, Azure DNS
 
 - 講義: [Azure DNS](../AZ-104/mod04-05-dns.md)
-- ラボ: [M01-ユニット6](lab-m01-u06.md)
+- ラボ: [M01-ユニット6 Azure で DNS 設定を構成する](lab-m01-u06.md)
 
 ■仮想ネットワーク ピアリング
 
 - 講義: [ピアリング接続](../AZ-104/mod05-01-peering.md)
-- ラボ: [M01-ユニット8](lab-m01-u08.md)
+- ラボ: [M01-ユニット8 グローバル仮想ネットワーク ピアリングを使用して 2 つの Azure 仮想ネットワークを接続する](lab-m01-u08.md)
 
 ■仮想ネットワークのルーティング
 
