--- a/AZ-700/m02.md
+++ b/AZ-700/m02.md
@@ -1,5 +1,21 @@
 # モジュール2: ハイブリッド ネットワークを設計して実装する
 
-■VPN
+■ハイブリッドネットワーク（ハイブリッドクラウド）とは？
 
-■Azure Virtual WAN
+- [ハイブリッドクラウドとマルチクラウド（外部ページ）](https://atlax.nri.co.jp/blogs/20210927/)
+
+■VPN接続
+
+- 講義:
+  - [仮想ネットワークゲートウェイ](virtual-../network/virtual-network-gateway.md)
+  - [VPN](../network/vpn.md)
+- ラボ: [M02-ユニット 3 仮想ネットワーク ゲートウェイを作成および構成する](lab-m02-u03.md)
+
+■Azure Virtual WAN (仮想 WAN)
+
+- 講義: [Azure Virtual WAN (仮想 WAN)](../AZ-104/mod05-04-virtualwan.md)
+- ラボ: [M02-ユニット 7 Azure portal を使用して仮想 WAN を作成する](lab-m02-u07.md)
+
+■NVA (Network Virtual Appliance)
+
+- 講義: [NVA (Network Virtual Appliance)](../network/nva.md)
