--- a/AZ-700/m03.md
+++ b/AZ-700/m03.md
@@ -1,21 +1,13 @@
 # モジュール3: Azure ExpressRoute を設計して実装する
 
-■概要
+■Azure ExpressRoute
 
-接続プロバイダーが提供するプライベート接続を介して、オンプレミスのネットワークを Microsoft クラウドに拡張するサービス。帯域保証型。
-
-[解説PDF: ExpressRoute まとめ](../AZ-500/pdf/mod2/ExpressRouteまとめ.pdf)
-
-■SKU
-
-- ExpressRoute Standard
-- ExpressRoute Premium
-  - ExpressRouteの「アドオン」
-  - 世界中のすべてのリージョンでホストされているすべての Microsoft クラウド サービスにアクセス可能
-- ExpressRoute Local
-  - データ転送は ExpressRoute のポート料金に含まれる
-  - [解説PDF: ExpressRoute Local](../network/ExpressRoute%20Local.pdf)
-
-■さらに詳しい解説
-
-→ [ExpressRoute](expressroute.md)
+- 講義:
+  - [ExpressRoute 概要](az700-expressroute.md)
+  - [ExpressRouteのSKU (Local, Standard, Premium)](expressroute-sku.md)
+- 参考情報:
+  - [ExpressRoute Global Reach](expressroute-global-reach.md)
+  - [ExpressRoute FastPath](expressroute-fastpath.md)
+- ラボ（オプション）:
+  - [M03-ユニット 4 ExpressRoute ゲートウェイを構成する](lab-m03-u04.md)
+  - [M03-ユニット 5 ExpressRoute 回線のプロビジョニング](lab-m03-u05.md)
