--- a/AZ-700/m04.md
+++ b/AZ-700/m04.md
@@ -1,8 +1,11 @@
 # モジュール4: Azure での非 HTTP(S) トラフィックの負荷分散
 
-※準備中
-
 ■Azure Load Balancer
+
+- 講義: [Azure Load Balancer](network/azure-load-balancer.md)
+- ラボ: [M04-ユニット4 Azure Load Balancer を作成および構成する](lab-m04-u04.md)
 
 ■Azure Traffic Manager
 
+- 講義: [Azure Traffic Manager](../AZ-303/mod05-03-traffic-manager.md)
+- ラボ: [M04-ユニット6 Azure portal を使用して Traffic Manager プロファイルを作成する](lab-m04-u06.md)
