--- a/AZ-700/m01.md
+++ b/AZ-700/m01.md
@@ -10,7 +10,9 @@
 
 ■パブリック/プライベートIPアドレス
 
-- 講義: [パブリック/プライベートIPアドレス](../network/ip-address.md)
+- 講義:
+  - [パブリック/プライベートIPアドレス](../network/ip-address.md)
+  - [パブリックIPアドレス プレフィックス](../network/public-ip-address-prefix.md)
 
 ■DNS（ドメインネームシステム）, Azure DNS
 
